# hello-api

./: .gitignore  README.md
.github/workflows/: build-and-test-hello-cpp.yml  build-and-test-hello-python.yml
hello_cpp/: CMakeLists.txt  README.md  easy
hello_cpp/example/: CMakeLists.txt  main.cpp
hello_cpp/include/: hello.h
hello_cpp/src/: hello.cpp
hello_cpp/test/: test_hello.cpp
hello_python/: requirements.txt  setup.py  setup_cython.py  tox.ini
hello_python/example/: example.py
hello_python/src/: __init__.py  hello.c  hello.py  hello.pyx
hello_python/tests/: test_hello.py
